# NixOS-Dev-Quick-Deploy

./: .aider.md  .aiexclude  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .sops.yaml  .trivyignore  .vscode.configs.import.cspell.config.json  90-DAY-REMEDIATION-PLAN.md  AGENTS.md  AGENT_AUTH_SECRETS_ROTATION.md  AGENT_BOOTSTRAP_COMMAND.md  AI-AGENT-PROGRESSIVE-DISCLOSURE-README.md  AI-AGENT-REFERENCE.md  AI-AGENT-SETUP.md  AI-AGENT-START-HERE.md  AI-MODEL-MODULAR-SYSTEM.md  AI-MODEL-QUICKSTART.md  AI-STACK-E2E-TESTING-GUIDE.md  AI-STACK-FEATURE-TEST-RESULTS-2026-01-02.md  AI-STACK-FIXES-2025-12-31.md  AI-STACK-IMPROVEMENT-PLAN.md  AI-STACK-QA-PLAN.md  AI-STACK-RAG-IMPLEMENTATION.md  AI-STACK-STATUS-REPORT.md  AI-STACK-V3-UPDATE-SUMMARY.md  AI-SYSTEM-TEST-REPORT-2025-12-22.md  AIDB_SETUP.md  ALL-FIXES-SUMMARY.md  AUTO-START-SETUP-GUIDE.md  BOOT-ERRORS-FIXED-2025-12-31.md  CACHING-STRATEGY-2026-01-01.md  CHANGES-SUMMARY-2025-12-31.md  CI_CD_INTEGRATION_PLAN.md  CLAUDE-LOCAL-ENFORCEMENT-COMPLETE.md  CLAUDE.md  CODE_REVIEW.md  COMPLETE-FIX-SUMMARY-2025-12-31.md  COMPLETION-ROADMAP.md  (+154 more)
ai-stack/mcp-servers/hybrid-coordinator/: BEFORE-AFTER-COMPARISON.md  Dockerfile  OPTIMIZATION-SUMMARY.md  QUALITY_CACHE_INTEGRATION.md  README.md  README.sdk.md  advanced_features.py  advisor_detector.py  affective_handlers.py  agent_capability_registry.py  agent_registry.py  agentic_memory_journal.py  agents_task_handlers.py  ai_coordinator.py  ai_coordinator_handlers.py  auth_middleware.py  auto_quality_improver.py  auto_tool_select_handlers.py  blast_radius_classifier.py  (+126 more)
(+4957 files in other folders)
